--- a/Firmware/LoRaTxNode/.project
+++ b/Firmware/LoRaTxNode/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>LoraTxNode</name>
-	<comment></comment>
+	<comment />
 	<projects>
 	</projects>
 	<buildSpec>
